force-app/main/default/objects/Global_Static__c/Global_Static__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings object to store general global static values</description>
    <label>Global Static</label>
</CustomObject>