force-app/main/default/objects/Global_Static__c/fields/GA_ID__c.field-meta.xml
<CustomField>
    <fullName>GA_ID__c</fullName>
    <label>GA ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>