force-app/main/default/objects/Global_Static__c/fields/GTM_AUTH__c.field-meta.xml
<CustomField>
    <fullName>GTM_AUTH__c</fullName>
    <description>GTM Authorization</description>
    <label>GTM AUTH</label>
    <length>25</length>
    <type>Text</type>
</CustomField>