force-app/main/default/objects/Global_Static__c/fields/GTM_ENV__c.field-meta.xml
<CustomField>
    <fullName>GTM_ENV__c</fullName>
    <label>GTM ENV</label>
    <length>30</length>
    <type>Text</type>
</CustomField>