force-app/main/default/objects/Global_Static__c/fields/GTM_ID__c.field-meta.xml
<CustomField>
    <fullName>GTM_ID__c</fullName>
    <description>GTM ID</description>
    <label>GTM ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>