force-app/main/default/objects/Global_Static__c/fields/value__c.field-meta.xml
<CustomField>
    <fullName>value__c</fullName>
    <description>To store the value of source</description>
    <label>value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>